--- a/devinmajordotcom/Content/cover.css
+++ b/devinmajordotcom/Content/cover.css
@@ -811,7 +811,7 @@ input[type="checkbox"]:checked + .slider:before {
     width: 100%;
 }
 
-.mediaDashboardLink, .bannerLink, .siteLink, .contactLink {
+.mediaDashboardLink, .bannerLink, .siteLink {
     border: 1px solid white;
     padding: 5px;
     border-radius: 5px;
@@ -822,6 +822,17 @@ input[type="checkbox"]:checked + .slider:before {
     background: -ms-radial-gradient(center, ellipse cover, rgba(0,128,128,1) 0%, rgba(11,28,30,1) 100%); /* ie10+ */
     background:radial-gradient(ellipse at center, rgba(0,128,128,1) 0%, rgba(11,28,30,1) 100%); /* w3c */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#008080', endColorstr='#0B1C1E',GradientType=1 ); /* ie6-9 */ 
+    text-decoration: none;
+    list-style: none;
+    margin-left: -40px;
+
+}
+
+.contactLink {
+    border: 1px solid white;
+    padding: 5px;
+    border-radius: 5px;
+    background-color: gray;
     text-decoration: none;
     list-style: none;
     margin-left: -40px;
