--- a/devinmajordotcom/Views/Shared/_HomeLayout.cshtml
+++ b/devinmajordotcom/Views/Shared/_HomeLayout.cshtml
@@ -59,7 +59,7 @@
                     <li><a href="#blog" class="smoothScroll">@userConfigViewModel.BlogTitle</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    
+                    <li>Item</li>
                 </ul>
             </div>
 
