--- a/devinmajordotcom/Views/Home/_ServerStatus.cshtml
+++ b/devinmajordotcom/Views/Home/_ServerStatus.cshtml
@@ -11,7 +11,7 @@
         <p style="color: #71cef5;">@config.Directive</p>
         <hr>
     
-        <div class="row" style="background-color: #0B1C1E;">
+        <div class="row">
         
             <div id="usageCounters"></div>
             
