--- a/devinmajordotcom/Views/Home/_ServerStatus.cshtml
+++ b/devinmajordotcom/Views/Home/_ServerStatus.cshtml
@@ -17,9 +17,7 @@
             
             <div id="tempCounters"></div>
             
-            <div class="col-sm-4">
-                <div class="chart"><div id="ramCounter" class="performancePieChart percentage" data-percent=""><div class="percent"></div></div><div class="chartlabel">RAM Usage</div></div>
-            </div>
+            <div id="ramCounters"></div>
 
             <div id="driveCounters"></div>
 
