--- a/devinmajordotcom/Views/MediaDashboard/_NewLink.cshtml
+++ b/devinmajordotcom/Views/MediaDashboard/_NewLink.cshtml
@@ -2,7 +2,7 @@
 
     <input class="newLinkInput hiddenID hiddenInput_{{newLinkCounter}}" data-val="true" data-val-number="The field ID must be a number." data-val-required="The ID field is required." id="SidebarLinks_{{newID}}__ID" name="SidebarLinks[{{newID}}].ID" type="hidden" value="{{newLinkCounter}}" style="">
 
-    <li class="mediaDashboardLink" data-hiddeninputid="SidebarLinks_{{newID}}__Order" style="padding-top: 10px; margin-bottom: 2vh;">
+    <li class="mediaDashboardLink" id="mediaDashboardLink_{{newID}}" data-hiddeninputid="SidebarLinks_{{newID}}__Order" style="padding-top: 10px; margin-bottom: 2vh;">
         <input class="newLinkInput hiddenInput_{{newLinkCounter}}" data-val="true" data-val-number="The field ParentApplicationId must be a number." data-val-required="The ParentApplicationId field is required." id="SidebarLinks_{{newID}}__ParentApplicationId" name="SidebarLinks[{{newID}}].ParentApplicationId" type="hidden" value="3" style="">
         <input class="newLinkInput hiddenInput_{{newLinkCounter}}" id="SidebarLinks_{{newID}}__ParentApplicationName" name="SidebarLinks[{{newID}}].ParentApplicationName" type="hidden" value="Plex Media Dashboard" style="">
         <input class="newLinkInput hiddenOrder hiddenInput_{{newLinkCounter}}" id="SidebarLinks_{{newID}}__Order" name="SidebarLinks[{{newID}}].Order" type="hidden" value="{{newLinkCounter}}" style="">
