--- a/devinmajordotcom/Views/Portfolio/_ManagePortfolio.cshtml
+++ b/devinmajordotcom/Views/Portfolio/_ManagePortfolio.cshtml
@@ -422,7 +422,6 @@
                                             }
                                         </div>
                                     </div>
-                                    <hr />
                                 </li>
                                 count++;
                             }
@@ -449,7 +448,7 @@
                             for (var i = 0; i < Model.LanguageSkills.Count; i++)
                             {
                                 @Html.HiddenFor(x => x.LanguageSkills[i].LanguageSkillID, new { @class = "language hiddenSkillId", data_skillid = Model.LanguageSkills[i].LanguageSkillID })
-                                <div class="languageSkill languageSkill_@i">
+                                <div style="margin-left:0px;margin-bottom:20px;" class="languageSkill languageSkill_@i">
                                     <div class="well well-sm text-left">
                                         <h5>Language Name</h5>
                                         @Html.TextBoxFor(x => x.LanguageSkills[i].LanguageName, new { @class = "form-control" })
@@ -462,7 +461,6 @@
                                         }
                                         <br/>
                                     </div>
-                                    <hr />
                                 </div>
                             }
                         }
@@ -511,7 +509,7 @@
                             @foreach (var link in Model.ContactSiteLinks.OrderBy(x => x.Order))
                             {
                                 @Html.HiddenFor(x => x.ContactSiteLinks[count].ID, new {@class = "hiddenContactLinkId hiddenInput_" + Model.ContactSiteLinks[count].ID})
-                                <li class="contactLink handlebarsItem" data-hiddeninputid="@Html.IdFor(x => x.ContactSiteLinks[count].Order)" style="padding-top: 10px; margin-bottom: 2vh; @if(!string.IsNullOrEmpty(Model.ContactSiteLinks[count].Color)) {<text>background-color:@Model.ContactSiteLinks[count].Color;</text>} ">
+                                <li class="contactLink handlebarsItem" id="contactLink_@count" data-hiddeninputid="@Html.IdFor(x => x.ContactSiteLinks[count].Order)" style="padding-top: 10px; margin-bottom: 2vh; @if(!string.IsNullOrEmpty(Model.ContactSiteLinks[count].Color)) {<text>background-color:@Model.ContactSiteLinks[count].Color;</text>} ">
                                     @Html.HiddenFor(x => x.ContactSiteLinks[count].Order, new {@class = "hiddenOrder hiddenInput_" + Model.ContactSiteLinks[count].ID})
                                     <div class="row">
                                         <div class="col-sm-2">
@@ -584,61 +582,6 @@
                             <button class="form-control btn btn-success" id="addNewContactLink" type="button" style="border-color: #00bc8c !important; background-color: #00bc8c !important;"><span class="glyphicon glyphicon-plus"></span>&nbsp;Add New Link</button>
                         </div>
                     </div>
-                    @*<div class="linkContainer">
-                        @foreach (var link in Model.ContactSiteLinks.OrderBy(x => x.Order))
-                        {
-                            @Html.HiddenFor(x => x.ContactSiteLinks[contactLinkCount].ID, new { @class = "hiddenContactLinkID hiddenInput_" + Model.ContactSiteLinks[contactLinkCount].ID })
-                            <div class="contactLink" data-hiddeninputid="@Html.IdFor(x => x.ContactSiteLinks[contactLinkCount].Order)" style="padding-top: 10px; margin-bottom: 2vh;">
-                                @Html.HiddenFor(x => x.ContactSiteLinks[contactLinkCount].Order, new { @class = "hiddenOrder hiddenInput_" + Model.ContactSiteLinks[contactLinkCount].ID })
-
-                                @{
-                                    var linkText = "<span class='fa fa-trash'></span>";
-                                    var actionLink = Ajax.ActionLink("REPLACE", "RemoveContactLink", "Portfolio", new { ID = Model.ContactSiteLinks[contactLinkCount].ID }, new AjaxOptions() { HttpMethod = "GET", OnSuccess = "RemoveContactLink('#deleteLink_" + Model.ContactSiteLinks[contactLinkCount].ID + "')", OnFailure = "ManagePortfolioSkillsAjaxFailure" }, new { data_content = linkText, @id = "deleteLink_" + Model.ContactSiteLinks[contactLinkCount].ID, @class = "btn btn-danger deleteGroup deleteMediaLink", @style = "float:right;" });
-                                }
-
-                                <div class="row">
-                                        
-                                    <div class="col-sm-12 wow rotateInUpLeft" data-wow-delay="0.3s">
-                                            
-                                        <div class="media @Model.ContactSiteLinks[contactLinkCount].DisplayIcon.Replace("fa fa-","")">
-                                            <div class="text-right">
-                                                @Html.Raw(actionLink.ToHtmlString().Replace("REPLACE", linkText))
-                                            </div> 
-                                            <div class="media-object pull-left">
-                                                <div class="col-sm-12 text-center">
-                                                    <div style="margin-bottom: 8px" class="input-group">
-                                                        <span class="input-group-btn">
-                                                            <button data-placement="left"
-                                                                    class="btn btn-default iconpicker"
-                                                                    name="@Html.NameFor(x => x.ContactSiteLinks[contactLinkCount].DisplayIcon)"
-                                                                    role="iconpicker"
-                                                                    data-iconset="fontawesome"
-                                                                    data-icon="@Model.ContactSiteLinks[contactLinkCount].DisplayIcon"
-                                                                    type="button"></button>
-                                                        </span>
-                                                        @Html.TextBoxFor(x => x.ContactSiteLinks[contactLinkCount].Directive, new { @class = "form-control namer", style = "margin-bottom: 0px", placeholder = "Follow me on" })
-                                                    </div>
-                                                </div>
-                                                <div class="col-sm-12 text-center">
-                                                    <div class="customColorPicker input-group colorpicker-component" data-color="@Model.ContactSiteLinks[contactLinkCount].Color">
-                                                        @Html.TextBoxFor(x => x.ContactSiteLinks[contactLinkCount].Color, new { @class = "form-control", @placeholder = "Pick a color, any color!" })
-                                                        <span class="input-group-addon"><i></i></span>
-                                                    </div>
-                                                </div>
-                                                <div class="tcol-sm-12ext-center">
-                                                    @Html.TextBoxFor(x => x.ContactSiteLinks[contactLinkCount].DisplayName, new { @class = "form-control namer", style = "margin-bottom: 0px", placeholder = "Facebook" })
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-12 text-center">
-                                        @Html.ValidationMessageFor(x => x.ContactSiteLinks[contactLinkCount].DisplayName)
-                                    </div>
-                                </div>
-                            </div>
-                            contactLinkCount++;
-                        }
-                    </div>*@
                 </div>
             </div>
         </div>
