--- a/devinmajordotcom/Views/Home/_ManageLandingPage.cshtml
+++ b/devinmajordotcom/Views/Home/_ManageLandingPage.cshtml
@@ -36,7 +36,7 @@
                         <a>Manage Look and Feel</a>
                     </h4>
                 </div>
-                <div id="collapseMain" class="panel-collapse collapse in">
+                <div id="collapseMain" class="panel-collapse collapse">
                     <div class="panel-body">
 
                         <div class="row">
