--- a/devinmajordotcom/Views/MediaDashboard/_ManageMediaDashboard.cshtml
+++ b/devinmajordotcom/Views/MediaDashboard/_ManageMediaDashboard.cshtml
@@ -17,7 +17,7 @@
                 <a>Main Settings</a>
             </h4>
         </div>
-        <div id="collapseMedia" class="panel-collapse collapse in">
+        <div id="collapseMedia" class="panel-collapse collapse">
             <div class="panel-body">
                 <div class="row">
                     <div class="col-sm-12 text-center">
