--- a/devinmajordotcom/Content/cover.css
+++ b/devinmajordotcom/Content/cover.css
@@ -16,8 +16,9 @@
 }
 
  .settingsWindowButton {
-      z-index: 10000;
       border-radius: 50%;
+      width:57.5px;
+      height: 50px;
   }
 
   /*---------------------------------------
