--- a/devinmajordotcom/Views/MyHome/_AddFavoriteForm.cshtml
+++ b/devinmajordotcom/Views/MyHome/_AddFavoriteForm.cshtml
@@ -36,7 +36,7 @@
 
     @Html.HiddenFor(x => x.UserID, new { @id = "UserID3" })
 
-    <div class="favoritesFormContainer">
+    <div class="favoritesFormContainer" style="color: white !important;">
         
         <div class="row">
             <div class="col-sm-12 text-left">
