--- a/devinmajordotcom/Views/Shared/_HomeLayout.cshtml
+++ b/devinmajordotcom/Views/Shared/_HomeLayout.cshtml
@@ -72,13 +72,14 @@
 
 <!-- SCRIPTS -->
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyBsVa2tZBcbxzQDgm8cmfaJ4MoVDB8xySg&sensor=true"></script>
+
 @Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/bundles/jqueryval")
 @Scripts.Render("~/bundles/modernizr")
 @Scripts.Render("~/bundles/bootstrap")
+@Scripts.Render("~/scriptBundles/FineUploader")
+@Scripts.Render("~/scriptBundles/tinymce")
 @Scripts.Render("~/bundles/homeScripts")
-@Scripts.Render("~/bundles/FineUploader")
-@Scripts.Render("~/bundles/tinymce")
     
 @RenderSection("scripts", required: false)
 
