updated bundles and weathermaps links

--- a/devinmajordotcom/Views/Shared/_BlogLayout.cshtml
+++ b/devinmajordotcom/Views/Shared/_BlogLayout.cshtml
@@ -18,7 +18,7 @@
     <meta name="theme-color" content="#ffffff">
 
     @Styles.Render("~/Content/homecss")
-    @Styles.Render("~/Content/FineUploader")
+    @Styles.Render("~/Content/FineUploader/fineUploaderCSS")
 
 </head>
 <body class="blogBody">
@@ -39,8 +39,8 @@
 @Scripts.Render("~/bundles/modernizr")
 @Scripts.Render("~/bundles/bootstrap")
 @Scripts.Render("~/bundles/homeScripts")
-@Scripts.Render("~/bundles/FineUploader")
-@Scripts.Render("~/bundles/tinymce")
+@Scripts.Render("~/bundles/FineUploader/fineUploaderScripts")
+@Scripts.Render("~/bundles/tinymce/tinymceScripts")
     
 @RenderSection("scripts", required: false)
 
