--- a/devinmajordotcom/Views/Shared/_Layout.cshtml
+++ b/devinmajordotcom/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
     <title>@config.WebsiteName</title>
     
     @Styles.Render("~/Content/css")
-    @Styles.Render("~/Content/FineUploader")
+    @Styles.Render("~/Content/FineUploader/fineUploaderCSS")
     
     <style>
         .site-wrapper:before {
@@ -118,10 +118,9 @@
 @Scripts.Render("~/bundles/modernizr")
 @Scripts.Render("~/bundles/bootstrap")
 @Scripts.Render("~/bundles/customScripts")
-@Scripts.Render("~/bundles/FineUploader")
-@Scripts.Render("~/bundles/tinymce")
+@Scripts.Render("~/bundles/FineUploader/fineUploaderScripts")
+@Scripts.Render("~/bundles/tinymce/tinymceScripts")
 <script src="@Url.Content("~/signalr/hubs")"></script>
-
 @RenderSection("scripts", required: false)
 
 </body>
